--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
     },
     "version": "2.4.2",
     "require": {
+        "magento/composer-root-update-plugin": "~1.1",
         "magento/product-community-edition": "2.4.2",
-        "magento/composer-root-update-plugin": "~1.1"
+        "rafaelstz/traducao_magento2_pt_br": "dev-master"
     },
     "autoload": {
         "exclude-from-classmap": [
@@ -77,4 +78,3 @@
         "magento-force": "override"
     }
 }
-
