--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,15 @@
     },
     "version": "2.4.2",
     "require": {
+        "ext-curl": "*",
         "magento/composer-root-update-plugin": "~1.1",
         "magento/product-community-edition": "2.4.2",
         "mageplaza/magento-2-product-slider": "^4.0",
         "mageplaza/module-banner-slider": "^4.0",
+        "mageplaza/module-smtp": "^4.3",
         "moip/magento2": "^2.0",
         "rafaelstz/traducao_magento2_pt_br": "dev-master",
-        "webshopapps/module-matrixrate": "^20.2",
-        "ext-curl": "*"
+        "webshopapps/module-matrixrate": "^20.2"
     },
     "autoload": {
         "exclude-from-classmap": [
